--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
+  "homepage":"https://llNorthPolell.github.io/lemmings-remake",
   "name": "lemmings",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.1.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy":"gh-pages -d build"
   },
   "dependencies": {
     "phaser": "^3.60.0",
