--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage":"https://llNorthPolell.github.io/lemmings-remake",
+  "homepage": "https://llnorthpolell.github.io/lemmings-remake",
   "name": "lemmings",
   "private": true,
   "version": "0.1.0",
@@ -10,9 +10,10 @@
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "predeploy": "npm run build",
-    "deploy":"gh-pages -d build"
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "gh-pages": "^6.0.0",
     "phaser": "^3.60.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
